# tiktokgen

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: creative-contract.md  product-spec.md  vlm-schema-prototype.md
docs/agents/: triage-labels.md
examples/: vlm-analysis.example.json
prompts/: script_generator.md  shot_generator.md  vlm_shot_verifier.md
remotion/src/: index.tsx
schemas/: edit-plan.schema.json  vlm-analysis.schema.json
scripts/: analyze_video_twelvelabs.py  contracts.py  generate_script.py  media_metadata.py  project_inputs.py  render_short.py  run_pipeline.py  twelvelabs_analyzer.py  vlm_schema.py
scripts/edit/: __init__.py  assemble.py  build_render_plan.py  planner.py  planner_facade.py  providers.py  resolve_shot_match.py  schema.py  schema_render_plan.py  schema_shot_match.py  shot_match_llm.py  strict_json.py  vlm_shots.py
scripts/fixtures/: pipeline.py
scripts/logger/: __init__.py  litellm_observability.py
scripts/narrative/: __init__.py  elevenlabs_tts.py  (+6 more)
tests/: test_edit_assemble.py  test_narrative_script_format.py  test_narrative_sentences.py  test_pipeline_fixtures.py  test_project_inputs.py  test_render_short_run_dir.py  test_run_pipeline_rerun.py  test_shot_match_mock.py  test_vlm_frame_extract.py  test_vlm_notes.py  test_vlm_providers.py  test_vlm_shots_markdown.py  test_vlm_twelvelabs.py  test_vlm_verify_shots.py
viewer/: cache-api-middleware.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+55 files in other folders)
