[project]
name = "ai-shorts-editor"
version = "0.1.0"
description = "Local CLI-first MVP for AI-generated food and travel shorts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.40.0",
  "litellm>=1.83.0",
  "pydantic>=2.13.3",
  "python-dotenv>=1.2.2",
  "twelvelabs",
  "uuid6>=2025.0.1",
  "requests>=2.32.0",
  "faster-whisper>=1.0.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["scripts"]